--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -28,6 +28,7 @@
             android:textColor="@color/black"/>
 
         <TextView
+            android:id="@+id/idUsuariocli"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/uid_usuario"
