Creando ViewHolder para vizualidar los clientes creados, su aviso cuando algun campo obligatorio no esta llenado, agregando imagenes y dos .json

--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:fitsSystemWindows="true"
     android:background="@drawable/fondo3"
     tools:context=".Cliente.AgregarClienteActivity">
 
@@ -29,6 +30,7 @@
 
         <TextView
             android:id="@+id/idUsuariocli"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/uid_usuario"
