--- a/app/src/main/res/layout/activity_lista_cliente.xml
+++ b/app/src/main/res/layout/activity_lista_cliente.xml
@@ -6,6 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Cliente.ListaClienteActivity">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewClientes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAgregarClient"
