--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_login"
+    android:fitsSystemWindows="true"
     android:fillViewport="true"
     tools:context=".RegistroActivity">
 
