se creo dialogo para poder editar y eliminar cliente, en la seccion de clientes

--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -20,6 +20,7 @@
 
         <!-- Título -->
         <TextView
+            android:id="@+id/TituloCliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/registrar_cli"
